fix orgapplyfor page

--- a/public/front/assets/css/orgapplyfor/v1.5/main.less
+++ b/public/front/assets/css/orgapplyfor/v1.5/main.less
@@ -4,6 +4,7 @@ body {
   max-width: 700px;
   overflow-x: hidden;
   word-wrap:break-word;
+  background-color: #ffffff;
 }
 #orgapplyfor {
   height: 100%;
@@ -83,6 +84,7 @@ body {
       display: flex;
       width: 100%;
       > input {
+        border: none;
         .size(100%, 45px);
         padding-left: 15px;
         flex: 1;
