--- a/public/front/assets/css/orgapplyfor/v1.5/orgapplyfor.css
+++ b/public/front/assets/css/orgapplyfor/v1.5/orgapplyfor.css
@@ -184,6 +184,7 @@ body {
   max-width: 700px;
   overflow-x: hidden;
   word-wrap: break-word;
+  background-color: #ffffff;
 }
 #orgapplyfor {
   height: 100%;
@@ -276,6 +277,7 @@ body {
   width: 100%;
 }
 #orgapplyfor .cooperation .regbox > input {
+  border: none;
   width: 100%;
   height: 45px;
   padding-left: 15px;
